# mqtt

./: Justfile  README.md
mqtt_backend/: .quartenv  pyproject.toml
mqtt_backend/src/mqtt_backend/: app.py  mqtt_client.py  weather_object.py
mqtt_backend/src/mqtt_backend/client/: weather_client.py
mqtt_frontend/: README.md  angular.json  package-lock.json  package.json
mqtt_frontend/src/: index.html
mqtt_frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
mqtt_frontend/src/app/class/: Parser.ts
mqtt_frontend/src/app/service/: weather.service.ts
mqtt_frontend/src/app/type/: WeatherDefinition.ts
